//
// Copyright 2020 DXOS.org
//

syntax = "proto3";

package example.testing.data;

message TestItemMutation {
  string key = 1;
  string value = 2;
}

message TestListMutation {
  string data = 1;
}

message TestItemSnapshot {
  repeated TestItemMutation keys = 1;
}

message TestPayload {
  string data = 1;
}
